# gem-render

./: .gitignore  .gitmodules  README.md  index.html
js/: gem-geometry.js  gem-material.js  main.js  settings-ui.js
vulkan/: .gitignore  CMakeLists.txt  README.md
vulkan/data/: brilliant-cut.json
vulkan/shaders/: gem.frag  gem.vert
vulkan/src/: main.c
vulkan/src/renderer/: vk_background.c  vk_background.h  vk_buffer.c  vk_buffer.h  vk_command.c  vk_command.h  vk_environment.c  vk_environment.h  vk_init.c  vk_init.h  vk_pipeline.c  vk_pipeline.h  vk_renderpass.c  vk_renderpass.h  vk_swapchain.c  vk_swapchain.h
vulkan/src/scene/: camera.c  camera.h  gem_geometry.c  gem_geometry.h  gem_material.c  gem_material.h
vulkan/src/util/: file_io.c  file_io.h
